
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2020 DEC 01a
  * in model/fluid/_Navier-Stokes_plasma/fluid_post.c
    - in find_post_variable_value_fluid(), added Weee post variable
  * in model/thermo/_generic/thermo.c
    - fixed 2 bugs: the enthalpy polynomials for C+ and H+ were not correctly input in one interval
    

2020 NOV 27a
  * in model/chem/_H2_He_CH4_Plasma_13s/chem.hh
    - added N2 as the last species
  * in model/thermo/_generic/thermo.c
    - in find_nuk_eta_kappa(), now include the charged species in the determination of eta and kappa
    - changed MAX_T_FOR_NUK_ETA_KAPPA_POLYNOMIALS from 12000.0 to 6000.0
    

2020 NOV 24a
  * in model/chem/_H2_He_CH4_Plasma_13s/chem.hh
    - changed H2plus for Heplus
  * in model/fluid/_drift-diffusion/fluid.c
    - in write_model_fluid_template(), changed Nkmax from 1e19 to 1e40;
  * in model/share/fluid_share.c
    - in find_init_number_density_templates(), added initial conditions for Neptune atmosphere
  * in model/thermo/_generic/thermo.c
    - added He+ species
  * in src/init.c
    - in reorder_initvar_species(), fixed a bug: when the number of species specified with the
      Species() command within Init() was equal to ns, the function would set the species ordering
      to the default and not to the ordering specified in Species()
      

2020 NOV 18a
  * in model/thermo/_generic/thermo.c
    - added two species: H+ and CH2
    - in _muk_from_rhok_Tk_Ek(), changed mobilities of H2+, Cs+, Ar+, C+, C2+, CN+, CO+ to
      mu=1.0/N*min(fact*1.00E23/sqrt(Tk),fact*2.50E12/sqrt(Estar)); with fact=sqrt(28.96E-3/_calM(k))
    - in find_dmuk_from_rhok_Tk_Ek(), changed dmui of H2+, Cs+, Ar+, C+, C2+, CN+, CO+ to